Overhauls layout. Still moving CSS around. #4