@@ -8,9 +8,21 @@ application {
     mainClass = 'root.Main'
 }
 
+
+
 javafx {
-    version = "15"
+    version = "15.0.1"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+run {
+   jvmArgs = [
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+        "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+                "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
+    ]
 }
 
 group 'org.winterbreak'
@@ -21,6 +33,8 @@ sourceCompatibility = 12
 repositories {
     mavenCentral()
 }
+
+
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
